2010-09-21  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amgtar.c: Add VERBOSE property,
	  unlink include/exclude file if VERBOSE if NO.
	* man/xml-source/amgtar.8.xml: Document VERBOSE property.

2010-09-21  Dustin J. Mitchell <dustin@zmanda.com>
	* perl/Makefile.am: make the thread check mandatory on FreeBSD
	* config/amanda/swig.m4: detect FreeBSD

2010-09-21  Dustin J. Mitchell <dustin@zmanda.com>
	* perl/Amanda/Report/human.pm: change some strings, and make
	  the statistics section more succinct; suggested by Jon LaBadie

2010-09-20  Dustin J. Mitchell <dustin@zmanda.com>
	* server-src/amadmin.c: add 'dles' and 'hosts' subcommands
	* man/xml-source/amadmin.8.xml: document them

2010-09-20  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Script_App.pm: Call _set_mesgout.
	* perl/Amanda/Application.swg, perl/Amanda/Script.pm (_set_mesgout):
	  Set $self->{mesgout}.
	* application-src/amraw.pl, application-src/amsamba.pl
	  application-src/amsuntar.pl, application-src/amzfs-sendrecv.pl,
	  Don't set $self->{mesgout}.

2010-09-20  Dustin J. Mitchell <dustin@zmanda.com>
	* perl/Amanda/DB/Catalog.pm: docs changes + defensive programming

2010-09-20  Dustin J. Mitchell <dustin@zmanda.com>
	* server-src/find.c: only expect partnum/totalparts in taper log lines
	* installcheck/catalogs/bigdb.cat: tests

2010-09-20  Dustin J. Mitchell <dustin@zmanda.com>
	* device-src/xfer-source-recovery.c: add XFER_MECH_DIRECTTCP_LISTEN to
	  XferSourceRecovery

2010-09-19  Dustin J. Mitchell <dustin@zmanda.com>
	* perl/Amanda/Changer/disk.pm: but still return stringy slot names

2010-09-19  Dustin J. Mitchell <dustin@zmanda.com>
	* perl/Amanda/Changer/disk.pm: sort slots numerically; patch by
	  'ghosts' on forums.zmanda.com

2010-09-18  Dustin J. Mitchell <dustin@zmanda.com>
	* man/xml-source/amanda-devices.7.xml: more detail on LEOM handling in
	  tape device

2010-09-18  Dustin J. Mitchell <dustin@zmanda.com>