@@ -3111,7 +3111,6 @@ read_schedule(
 
 	    if (dp->data_path == DATA_PATH_DIRECTTCP &&
 		dp->to_holdingdisk == HOLD_AUTO) {
-		/* planner already logged a warning. */
 		dp->to_holdingdisk = HOLD_NEVER;
 	    }
 
