@@ -1,4 +1,8 @@
 2010-09-21  Jean-Louis Martineau <martineau@zmanda.com>
+	* server-src/amcheck.c, server-src/driver.c, server-src/planner.c:
+	  Don't print warning for 'holdingdisk auto' and directtcp data path.
+
+2010-09-21  Jean-Louis Martineau <martineau@zmanda.com>
 	* application-src/amgtar.c: Add VERBOSE property,
 	  unlink include/exclude file if VERBOSE if NO.
 	* man/xml-source/amgtar.8.xml: Document VERBOSE property.
